--- a/mtech-challenge/package.json
+++ b/mtech-challenge/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://lucalves3.github.io/Mtech-Challenge",
   "name": "mtech-challenge",
   "version": "0.1.0",
   "private": true,
@@ -6,7 +7,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-rc.1",
     "react-dom": "^17.0.2",
     "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^5.3.0",
@@ -17,6 +20,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
